# definers

./: .gitignore  API_SPECS.md  CONTRIBUTING.md  Dockerfile  README.md  definers.py  pyproject.toml
.github/scripts/: autobot_ai.js  autobot_deterministic_scorer.js  autobot_issue_intake.js  autobot_labels.js  autobot_pr_analysis.js  autobot_project_manager.js  autobot_prompts.js
.github/scripts/autobot/: constants.cjs  gather_info.cjs  issue_intake.cjs  labels.cjs  pr_analysis.cjs  project_manager.cjs  prompts.cjs  unified.cjs  utils.cjs
.github/workflows/: autobot.yml  check-title.yml  check.yml  codeql-analysis.yml  coverage.yml  dependabot-auto.yml  dependency-review.yml  docker.yml  formatter-and-linter.yml  janitor.yml  notify-release.yml  pr-size.yml  publish.yml  quality.yml  smart-link.yml  style.yml  test-and-coverage.yml  tests-report.yml  tests-status.yml  tests.yml
.runpod/: hub.json  tests.json
builder/: requirements-cuda.txt  requirements-no-cuda.txt
definers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docker/: animation.docker  animation.yml  audio.docker  audio.py  audio.yml  chat.docker  chat.py  chat.yml  faiss.docker  faiss.py  faiss.yml  image  image.docker  image.py  image.yml  train.docker  train.py  train.yml  translate.docker  translate.py  translate.yml  video.docker  video.py  video.yml
docker/animation/: app.py  docker-compose.yml
docker/audio/: app.py  docker-compose.yml
docker/chat/: app.py  docker-compose.yml
docker/faiss/: app.py  docker-compose.yml
docker/image/: Dockerfile  app.py  docker-compose.yml
docker/train/: app.py  docker-compose.yml
docker/translate/: app.py  docker-compose.yml
docker/video/: app.py  docker-compose.yml
docs/: API_SPECS.md  README.md
docs/capabilities/audio/: analysis.md  mastering.md  stems.md
docs/capabilities/data/: preparation.md
docs/capabilities/media/: image.md  video.md  web-transfer.md
docs/capabilities/ml/: text.md  training.md
docs/capabilities/system/: installation-and-runtime.md
docs/capabilities/ui/: launchers.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: autobot-scenario-audit.md  cli.md  package-map.md
docs/runtime/: numpy-cupy-compat.md  optional-dependencies.md
scripts/: build_docker.bat  clean_docker.bat  clean_workspace.py  install.bat  manage-git.bat  preview.bat  print_autobot_regression_fixture.cjs  push_docker.bat  run_autobot_scenario_lanes.cjs  sanitize_python.py  setup_cuda.sh  strip_comments.py
src/: handler.py
src/definers/: __init__.py  __main__.py  _audio.py  _capabilities.py  _chat.py  _constants.py  _core.py  _cuda.py  _data.py  _image.py  _logger.py  _ml.py  _system.py  _text.py  _video.py  _video_gui.py  _web.py  audio.py  capabilities.py  chat.py  cli.py  command_runner.py  constants.py  core.py  cuda.py  data.py  file_ops.py  googledrivedownloader_compat.py  image.py  logger.py  ml.py  ml_health.py  ml_regression.py  ml_text.py  model_installation.py  observability.py  opencv_compat.py  optional_dependencies.py  os_utils.py  path_utils.py  (+13 more)
src/definers/application_chat/: __init__.py  audit_message_builder.py  contracts.py  handler_factory.py  handlers.py  history_builder.py  request_audit_logger.py  request_context_assembler.py  request_factory.py  request_normalizer.py  text_context_builder.py
src/definers/application_data/: __init__.py  arrays.py  contracts.py  dataset_shape_service.py  dataset_source_loader.py  dataset_tensor_builder.py  dataset_value_loader.py  exports.py  loader_runtime.py  loaders.py  preparation.py  runtime_patches.py  text_vectorizer.py  tokenization.py  vectorizers.py
src/definers/application_ml/: __init__.py  answer_audio_loader.py  answer_content_path_resolver.py  answer_dependency_loader.py  answer_generation_service.py  answer_history_preparer.py  answer_image_loader.py  answer_service.py  answer_text_service.py  contracts.py  facade_api.py  facade_runtime.py  health.py  inference.py  introspection.py  regression_predictor.py  repository_sync.py  rvc.py  safe_deserialization.py  text_feature_extractor.py  text_feature_reconstructor.py  text_generation.py  trainer_plan.py  training.py
src/definers/application_shell/: __init__.py  cli_command_definition.py  cli_request.py  command_dispatcher.py  command_execution_metadata.py  command_parser.py  command_registry.py  commands.py  install_command.py  install_runtime_port.py  lyric_video_command.py  lyric_video_port.py  music_video_command.py  music_video_port.py  output_port.py  request_coercer.py  start_command.py  start_project_port.py  unknown_command.py
src/definers/application_text/: __init__.py  language.py  system_messages.py  text_transforms.py  translation.py  validation.py
src/definers/audio/: __init__.py  _exports.py  analysis.py  config.py  dsp.py  io.py  (+35 more)
tests/: __init__.py  autobot_adversarial.test.cjs  autobot_pipeline_test_support.cjs  autobot_scripts.test.cjs  autobot_smart_link_unified.test.cjs  conftest.py  deterministic_scenario_engine.cjs  deterministic_scenario_lanes.cjs  deterministic_scenario_lanes.test.cjs  deterministic_scenario_regression_fixtures.cjs  javascript_test_harness.cjs  optional_dependency_stubs.py  smart_link_scripts.test.cjs  test__init_logger.py  test__install_ffmpeg_linux.py  test__install_ffmpeg_windows.py  test_add_path.py  test_add_path_windows.py  test_answer.py  test_application_chat_handlers.py  test_application_ml_answer_history_preparer.py  test_application_ml_answer_services.py  test_application_ml_inference_services.py  test_application_shell_commands.py  test_application_shell_module_exports.py  test_application_text_validation.py  test_apt_install.py  test_audio_app.py  test_audio_app_services.py  test_audio_filters.py  test_audio_io_read_audio.py  test_audio_lazy_exports.py  test_audio_mastering_character.py  test_audio_mastering_contract.py  test_audio_mastering_delivery.py  test_audio_mastering_dynamics.py  test_audio_mastering_finalization.py  test_audio_mastering_generation.py  test_audio_mastering_loudness_accuracy.py  test_audio_mastering_phase.py  (+236 more)
(+245 files in other folders)
