[build-system]
requires = ["setuptools>=61.0.0,<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "definers"
version = "0.1.0"
authors = [
  { name = "Yaron Koresh", email = "aharonkoresh1@gmail.com" },
]
description = "A comprehensive Python toolkit for AI, data processing, media manipulation, and system utilities."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.10.0",
    "beautifulsoup4>=4.12.0",
    "cuda-python>=12.0.0",
    "datasets>=2.14.0",
    "demucs>=4.0.0",
    "diffusers>=0.35.0",
    "faiss-cpu>=1.7.4",
    "fastapi>=0.100.0",
    "googledrivedownloader>=0.4",
    "gradio>=5.0.0",
    "gradio-client>=1.0.0",
    "huggingface-hub>=0.20.0",
    "hydra-core>=1.3.0",
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.0",
    "joblib>=1.3.0",
    "langdetect>=1.0.9",
    "librosa>=0.10.0",
    "lxml[html_clean]>=5.2.0",
    "matplotlib>=3.7.0",
    "moviepy>=1.0.3",
    "nltk>=3.8.0",
    "numba>=0.57.0",
    "numpy>=1.26.0",
    "onnx>=1.14.0",
    "openai-whisper>=20231117",
    "opencv-contrib-python-headless>=4.8.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "pillow-heif>=0.13.0",
    "playwright>=1.40.0",
    "pydub>=0.25.1",
    "pynvml>=11.4.0",
    "requests>=2.31.0",
    "sacremoses>=0.0.53",
    "safetensors>=0.4.0",
    "scikit-image>=0.21.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "sentencepiece>=0.1.99",
    "soundfile>=0.12.0",
    "sox>=1.4.1",
    "tensorflow>=2.15.0",
    "tf-keras>=2.15.0",
    "tokenizers>=0.15.0",
    "torchvision>=0.16.0",
    "torchaudio>=2.1.0",
    "transformers>=4.36.0",
    "basic-pitch @ git+https://github.com/YaronKoresh/basic-pitch.git",
    "chatterbox-tts @ git+https://github.com/YaronKoresh/chatterbox.git",
    "fairseq @ git+https://github.com/YaronKoresh/fairseq.git",
    "faiss @ https://github.com/YaronKoresh/faiss/releases/download/3b14dad/faiss-1.12.0-py3-none-manylinux_2_35_x86_64.whl ; platform_system == 'Linux' and platform_machine == 'x86_64'",
    "madmom @ git+https://github.com/CPJKU/madmom@0551aa8f48d71a367d92b5d3a347a0cf7cd97cc9",
    "refiners @ git+https://github.com/finegrain-ai/refiners@d288e94fa8eed1386bd28cd0d5ceb8109c3ff398",
    "stable-ts @ git+https://github.com/jianfch/stable-ts@d89c6250fd4745115b44b83a8a3f7ebfd0e2a1f1",
    "stopes[inference-cpu] @ git+https://github.com/YaronKoresh/stopes.git",
]

[project.urls]
Homepage = "https://github.com/YaronKoresh/definers"
Repository = "https://github.com/YaronKoresh/definers"

[project.optional-dependencies]
dev = [
    "autoflake>=2.3.0,<2.4.0",
    "pytest>=8.4.0,<8.5.0",
    "pytest-cov>=6.3.0,<6.4.0",
    "black>=25.1.0,<25.2.0",
    "isort>=6.0.0,<6.1.0",
    "hypothesis>=6.138.0,<6.139.0",
    "expecttest>=0.3.0,<0.4.0",
]
cuda = [
    "distributed-ucxx-cu12==0.39.1",
    "raft-dask-cu12==24.8.1",
    "rapids-dask-dependency==24.8.0",
    "rmm-cu12==24.8.2",
    "ucx-py-cu12==0.39.2",
    "ucxx-cu12==0.39.1",
    "pylibraft-cu12==24.8.1",
    "pynvjitlink-cu12==0.7.0",
    "libucx-cu12==1.15.0.post2",
    "cudf-cu12==24.8.1",
    "cuml-cu12==24.8.0",
    "cupy-cuda12x==13.3.0",
    "dask[complete]==2024.7.1",
    "dask-cuda==24.8.2",
    "dask-cudf-cu12==24.8.2",
    "distributed==2024.7.1",
    "nvidia-cublas-cu12>=12.8.0,<12.9.0",
    "nvidia-cuda-cupti-cu12>=12.8.0,<12.9.0",
    "nvidia-cuda-nvrtc-cu12>=12.8.0,<12.9.0",
    "nvidia-cuda-runtime-cu12>=12.8.0,<12.9.0",
    "nvidia-cudnn-cu12>=9.10.0,<9.11.0",
    "nvidia-cufft-cu12>=11.3.0,<11.4.0",
    "nvidia-curand-cu12>=10.3.0,<10.4.0",
    "nvidia-cusolver-cu12>=11.7.0,<11.8.0",
    "nvidia-cusparse-cu12>=12.5.0,<12.6.0",
    "nvidia-nccl-cu12>=2.27.0,<2.28.0",
    "nvidia-nvtx-cu12>=12.8.0,<12.9.0",
]

[tool.autoflake]
check = true

[tool.isort]
profile = "black"

[tool.black]
line-length = 70
target-version = ["py310", "py311"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
extend-exclude = '''
/(
  | \.git
  | \__pycache__
  | build
  | dist
  | \.venv
)/
'''

