[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "definers"
version = "1.0.2"
authors = [
    { name = "Yaron Koresh" },
]
description = "A comprehensive Python toolkit for AI, data processing, media manipulation, and system utilities."
readme = "README.md"
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.0,<3",
    "requests>=2.28.0",
    "joblib>=1.3.0",
    "pandas>=1.5.0",
    "pillow>=9.1.0",
    "scipy>=1.10.0,<2",
]

[project.license]
text = "MIT"

[project.scripts]
definers = "definers.cli:main"

[project.urls]
Homepage = "https://github.com/YaronKoresh/definers"
Repository = "https://github.com/YaronKoresh/definers"
Issues = "https://github.com/YaronKoresh/definers/issues"

[project.optional-dependencies]
audio = [
    "audio-separator>=0.30.0",
    "librosa>=0.10.0",
    "midi2audio",
    "numba>=0.57.0",
    "pydub>=0.25.1",
    "soundfile>=0.12.0",
    "sox>=1.4.1",
    "torch>=2.1.0",
    "torchaudio>=2.1.0",
    "resampy>=0.4.2",
    "stable-ts>=2.19.1",
]
image = [
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.0",
    "opencv-contrib-python-headless>=4.8.0",
    "pillow-heif>=0.13.0",
    "scikit-image>=0.21.0",
    "refiners>=0.4.0",
]
video = [
    "edlib",
    "imageio>=2.30.0",
    "imageio-ffmpeg>=0.4.0",
    "moviepy>=2.0.0",
    "opencv-contrib-python-headless>=4.8.0",
    "scikit-image>=0.21.0",
]
ml = [
    "diffusers>=0.35.0",
    "accelerate>=1.10.0",
    "datasets>=2.14.0",
    "faiss-cpu>=1.7.4",
    "huggingface-hub>=0.20.0",
    "onnx>=1.14.0",
    "safetensors>=0.4.0",
    "scikit-learn>=1.3.0",
    "sentencepiece>=0.1.99",
    "tokenizers>=0.15.0",
    "torch>=2.1.0",
    "transformers>=4.36.0",
]
nlp = [
    "langdetect>=1.0.9",
    "nltk>=3.8.0",
    "sacremoses>=0.0.53",
    "stopes>=2.2.1; sys_platform != \"win32\"",
]
web = [
    "cssselect>=1.2.0",
    "fastapi>=0.100.0",
    "googledrivedownloader>=1.1.0",
    "gradio>=6.9.0",
    "httpx[http2]>=0.28.0",
    "aioquic>=1.2.0",
    "lxml[html_clean]>=5.2.0",
    "matplotlib>=3.7.0",
    "playwright>=1.40.0",
]
all = [
    "definers[audio,image,video,ml,nlp,web]",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "hypothesis>=6.90.0",
    "expecttest>=0.3.0,<0.4.0",
    "ruff",
    "poethepoet",
    "pre-commit",
    "build",
    "vulture>=2.10",
]
cuda = [
    "cuda-python>=12.0.0",
    "nvidia-ml-py>=13.590.48",
    "distributed-ucxx-cu12==0.48.0",
    "raft-dask-cu12==26.2.0",
    "rapids-dask-dependency==26.2.0",
    "rmm-cu12==26.2.0",
    "ucx-py-cu12==0.45.0",
    "ucxx-cu12==0.48.0",
    "pylibraft-cu12==26.2.0",
    "pynvjitlink-cu12==0.7.0",
    "libucx-cu12==1.19.0",
    "cudf-cu12==26.2.1",
    "cuml-cu12==26.2.0",
    "cupy-cuda12x==14.0.1",
    "dask[complete]==2026.3.0",
    "dask-cuda==26.2.0",
    "dask-cudf-cu12==26.2.1",
    "distributed==2026.3.0",
    "nvidia-cublas-cu12>=12.8.0,<12.10.0",
    "nvidia-cuda-cupti-cu12>=12.8.0,<12.10.0",
    "nvidia-cuda-nvrtc-cu12>=12.8.0,<12.10.0",
    "nvidia-cuda-runtime-cu12>=12.8.0,<12.10.0",
    "nvidia-cudnn-cu12>=9.10.0,<9.21.0",
    "nvidia-cufft-cu12>=11.3.0,<11.5.0",
    "nvidia-curand-cu12>=10.3.0,<10.4.0",
    "nvidia-cusolver-cu12>=11.7.0,<11.8.0",
    "nvidia-cusparse-cu12>=12.5.0,<12.6.0",
    "nvidia-nccl-cu12>=2.27.0,<2.30.0",
    "nvidia-nvtx-cu12>=12.8.0,<12.10.0",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/definers",
]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
markers = [
    "asyncio: marks async tests",
]

[tool.ruff]
target-version = "py310"
line-length = 80

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
]
ignore = [
    "E501",
    "E402",
    "E722",
    "E741",
    "F401",
]

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*" = [
    "E731",
]

[tool.ruff.lint.isort]
force-single-line = false
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.poe.tasks]
check = ["clean", "compile", "dead-code", "strip-comments", "pre-commit", "test", "clean"]
coverage = ["_coverage-clean", "_coverage-run", "_coverage-clean"]

[tool.poe.tasks.test]
cmd = "pytest tests/"

[tool.poe.tasks._coverage-run]
cmd = "python -m pytest -q --cov=src/definers --cov-branch --cov-report=term-missing:skip-covered tests/"

[tool.poe.tasks._coverage-run.env]
COVERAGE_FILE = ".coverage.poe"

[tool.poe.tasks._coverage-clean]
cmd = "python -c \"from pathlib import Path; Path('.coverage.poe').unlink(missing_ok=True);  Path('.coverage').unlink(missing_ok=True)\""

[tool.poe.tasks.compile]
cmd = "python -m compileall -q ."

[tool.poe.tasks.lint]
cmd = "ruff check ."

[tool.poe.tasks.check-format]
cmd = "ruff format --check ."

[tool.poe.tasks.pre-commit]
cmd = "pre-commit run --all-files"

[tool.poe.tasks.pre-commit.env]
SKIP = "no-commit-to-branch"

[tool.poe.tasks.clean]
cmd = "python scripts/clean_workspace.py"

[tool.poe.tasks.strip-comments]
cmd = "python scripts/strip_comments.py"

[tool.poe.tasks.build]
cmd = "python -m build"

[tool.poe.tasks.build-wheel]
cmd = "python -m build --wheel"

[tool.poe.tasks.hook]
cmd = "pre-commit install"

[tool.poe.tasks.format]
cmd = "ruff format ."

[tool.poe.tasks.dead-code]
cmd = "vulture src/ --min-confidence 80 --sort-by-size"

[tool.poe.tasks.cli-health]
cmd = "python -m pytest tests/test_cli.py tests/test_cli_health.py tests/test_launchers.py -q"

[tool.poe.tasks.cli-health.env]
PYTEST_DISABLE_PLUGIN_AUTOLOAD = "1"

[tool.poe.tasks.install-matrix-smoke]
cmd = "python -m pytest tests/test_install_matrix_smoke.py tests/test_pyproject_config.py -q"

[tool.poe.tasks.install-matrix-smoke.env]
PYTEST_DISABLE_PLUGIN_AUTOLOAD = "1"

[tool.poe.tasks.answer-simulations]
cmd = "python -m pytest tests/test_application_ml_answer_services.py tests/test_application_ml_answer_history_preparer.py tests/test_answer.py -q"

[tool.poe.tasks.answer-simulations.env]
PYTEST_DISABLE_PLUGIN_AUTOLOAD = "1"

[tool.poe.tasks.ml-health]
cmd = "python -m pytest tests/test_ml_health.py tests/test_auto_trainer.py tests/test_train_handlers.py tests/test_audio_workspace.py -q"

[tool.poe.tasks.ml-health.env]
PYTEST_DISABLE_PLUGIN_AUTOLOAD = "1"
